# ChangeLog for www-servers/apache
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.262 2014/04/20 09:51:40 ago Exp $

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org> apache-2.2.27.ebuild:
  Stable for amd64, wrt bug #507866

*apache-2.2.27 (16 Apr 2014)

  16 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> +apache-2.2.27.ebuild,
  -apache-2.4.7.ebuild:
  Version bump. Removed old.

*apache-2.4.9 (18 Mar 2014)

  18 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> -apache-2.4.6-r2.ebuild,
  +apache-2.4.9.ebuild:
  Security bump (bug #504990). Removed old.

  19 Feb 2014; Lars Wendler <polynomial-c@gentoo.org> -apache-2.4.6-r1.ebuild,
  apache-2.4.6-r2.ebuild, apache-2.4.7.ebuild:
  Moved use conditionals from global scope to pkg_setup() (bug #499260).
  Removed old.

  19 Feb 2014; Lars Wendler <polynomial-c@gentoo.org> apache-2.2.26.ebuild:
  Removed WANT_AUTOMAKE (bug #501518).

  31 Jan 2014; Mike Frysinger <vapier@gentoo.org> apache-2.4.7.ebuild:
  Declare mod_proxy_balancer dep on mod_proxy_balancer #460434 by Jaco Kroon.

  31 Jan 2014; Mike Frysinger <vapier@gentoo.org> apache-2.2.24.ebuild,
  apache-2.2.25.ebuild, apache-2.2.26.ebuild, apache-2.4.6-r1.ebuild,
  apache-2.4.6-r2.ebuild, apache-2.4.7.ebuild:
  Add arm64 love.

  31 Jan 2014; Mike Frysinger <vapier@gentoo.org> apache-2.4.7.ebuild:
  Add workaround for gen_test_char behavior when cross-compiling #385783 by
  Bertrand Jacquin.

  24 Jan 2014; Mike Frysinger <vapier@gentoo.org> apache-2.2.24.ebuild,
  apache-2.2.25.ebuild, apache-2.2.26.ebuild, apache-2.4.6-r1.ebuild,
  apache-2.4.6-r2.ebuild, apache-2.4.7.ebuild:
  Disable dumb cross-compiling size check.

  15 Jan 2014; Robin H. Johnson <robbat2@gentoo.org> apache-2.4.7.ebuild:
  proxy_scgi should behind IfDefine PROXY as well, otherwise you get undefined
  symbol: ap_proxy_canonenc.
