@@ -9,34 +9,34 @@ AUX apache2.4.service 728 SHA256 4420af10d1237f90ae519e56e75f1cc84e9f7c7b63aca9d
 AUX gentoo-apache-2.2.23-initd_fixups.patch 963 SHA256 ea8cdb5ad98416fcc3daf496bc996d23c09212f325980e0328da5e76deb8ad5d SHA512 3250d94e9fc5c3f921c756d3d5cfc670b0221a06dab376ef162cc8ecec8d1300cb95266b2a96d5a608a710326de2144662d450c8a2142a12200b1210fbc9cdb0 WHIRLPOOL 314e1d2c6d156cbf1a0330ab822f64a32d2b6b52adf46e1db4d8f148eb1e471712ebd65948056e4e2e85585499cbc1f9a0d0616f2a6c1ec9b382af35bdf8f194
 AUX httpd-2.4.3-mod_systemd.patch 5396 SHA256 d8f5c76dd5eb0edc9759ea300d3b320ee96b6e6f9fabb8a4043f8d1b77b646a2 SHA512 0db785fac6034aa431e9d816bd06020a5b287dbdae794f8b94eb267805981a1d2a97fdb92bd13e32d35329e6db3f799a03e98456329f6a80c5863e72a26e5c59 WHIRLPOOL 4016b9626af1a8ca001518e8a45262ca4dd27a998727db988a8f1234aa7c5d56d439f4ecfdc6219510f57c97991884a7f57eaa83535988cb72e9fd8ffdee7b6e
 DIST gentoo-apache-2.2.23-20121012.tar.bz2 64135 SHA256 711a88f26c58b10b082f7ff411366cd768f9450101da050438a2f77abeab7333 SHA512 92a49f954b82d4427862f41977625a60641731cc25ab3efdd666be8db839038e7b1c2ef2f878d5efed243eaa63237e88ee4993cd25cca1dfbb0f56a6b2093d57 WHIRLPOOL 221d9c0cf999430afc11a8e48ae67019c7f31daca827a5db7615aca24859788743e5da00e4c99b7b7b375e58fafd6c148339e5671be939dbc30735031e12c49f
-DIST gentoo-apache-2.4.4-20130801.tar.bz2 24536 SHA256 bae819de1ded2104a65dabc759e8a7bc6b442d2588ffb99e563be8482b3d87bf SHA512 97474e7d7f17d6537337b51385be4d093f9a15cf3a0a5f567ad883c4cc653d9bd3bed6e5f308e1bb9cf648be2c4a67a3099a95bd36b1be7c15ca8c512e01b2b0 WHIRLPOOL 4b75f5477b601f4159cb1b12c5f76ae4f678c83cef4441eba0e90a9be8222e4abd981a0d2205a54ddeebd8276567670c5ad827aa19f22f17196986bfd5c05c73
+DIST gentoo-apache-2.2.27-r1-20140420.tar.bz2 64592 SHA256 f3763aa9132fd4c61911d905dc46be7833ce5d6d5911f6b4158075f8fd282b2e SHA512 e2b818361cc04a99cb64dbab5a71b7e528ccff23c9cabf89d21d0ec104f406b1070d828e6fe9cf2371aec5a2b56bd3febb8d289b4e1cb9ec784f6449016e3008 WHIRLPOOL bf6404183c1c9f9ede7c167ff1ec31b425dbe633ea07e13ffd871ad551c7cf7b123923bbf194d4d543acb6e7de81e6bf1680d1ed17ddafbb8d86a5474a6f7850
+DIST gentoo-apache-2.4.9-r1-20140420.tar.bz2 24991 SHA256 20e12e91c29e283416425004a0375a1221713b4d2d362a9e2473455e83e75d12 SHA512 d7493da6ac1ed8d37e0d2dbf44bf9cacafcd47fcbe16a498571a6cd3ad18a0921c1f232844e76206b71fe5f22bdf3496abf7160a9900d77625aa84fe8f031a09 WHIRLPOOL 1ec11d3df01816c2a7da8a25f68fd90ca1c9a7b90b208583bf13ba55f52e4d5ecb161fc6db31ca8db4f89501c14dbaa7f6a624f6af43cce93aec734dc69bbac5
 DIST httpd-2.2.24.tar.bz2 5490439 SHA256 0453f5d2d7e3b1975a1c6a8a22b6d6ff768715a3b0a89b51e5f7b5851628fad7 SHA512 e1c24535bb0ae309c249c0a6fbd390064a929d960241e5e68737744f120a88b615bd5d9065fc2f749ee664ed96621c9373576e6ca32bd189d625fcd4dc1b8f01 WHIRLPOOL b24bf388e1be29cc52341d66af00318b3a60ad6db6b4df8c6cc0abf496c4e603d3b733529d21d3d1c37dad0008cacafa8078abdff6c25cb42b3874b6e176713e
 DIST httpd-2.2.25.tar.bz2 5524905 SHA256 4bcaf3524796a514b31aa5c64ce80b0cdb484bab5735416de29d00f6d50fa65a SHA512 4750e79bdab4ca28c602a808531dfc1482e86bf425d5cb3bcb42a9ccfbbfde5bfd05e66649ea741523c96de6582f5e12facbb1e7d67257bcf78a3ed7a66f80d9 WHIRLPOOL 7ce37be9b66de24cc7259c6e8a0696b496c893933b1c5dbdff5147c279fb644b5d5fc77ed02531b0f081f0c217f684d1bcd98bac26938b23c1d7a4ec085162f6
-DIST httpd-2.2.26.tar.bz2 5390190 SHA256 af908e3dd5673f1c6f0ccc615e11d435e77517940af00e518e68ea25284b42b6 SHA512 d66bef511acfc9b0daea699c83c282a88351f6820369a6ed70c71a192a90911c6d28491d845e545a50dd394241e16e41338c054844cddcffc49af99c6208ec41 WHIRLPOOL 9ac6e8f38144b701201d87d9010a79314f331cc696660358c1cd6a27e8a712910d6cf6796156dfa2aef9aeea64d47550afc9b2afa3984afd6c8f4519d6f61744
 DIST httpd-2.2.27.tar.bz2 5616798 SHA256 205973ded6ca55c056ce9c84d73ab708f7829f330193bd39b651463b8d4f8147 SHA512 b318c157392e5c602d42eb52c8d7f1bd7258c817756fd20dcec8a8a177af3e42db4e25891473646c293ace42bc5d5608de083a14878ed446b8559709492bbf1d WHIRLPOOL c80c56d511586c87d6eb41eb8f5c00317d101b7532b127d50531409f4068aceba1022b16cf2ab122d91edcd9552fcae8543e8a31fbab78564dcd2e057b29e0f1
 DIST httpd-2.4.9.tar.bz2 4994460 SHA256 f78cc90dfa47caf3d83ad18fd6b4e85f237777c1733fc9088594b70ce2847603 SHA512 3a66302e18a2d165b3851665dc73be7d3849fc3359c1ff9dd9e2eaebf1f1d8fb89b7b0a05929d6247750bf0ed1abf9cf3c236a373b2d99635c8ca41698719c96 WHIRLPOOL 735677695d3b1497d554dd3e8d97733359140f3bb524335ab474275ca2b5546ceab8f5f3778948fabee2d152bf5b096d99b3dabb1011a4b68905c7cd5012a648
 EBUILD apache-2.2.24.ebuild 3241 SHA256 fb797efa6220ed5ab35d9a3ed6e652e72f97e1fdc99c7f8113768a1799f6abbc SHA512 cf1306c8ee02ee40ad8a6119148cd7ca02fabefeee7529250c230daff73118c9bce24707fdc0db681e6de86c34891c60313ecf3adca8098b89ca9057ab97fab8 WHIRLPOOL e1364ee59ac46ffd523de98cfaa417c86e4b9d0196dce50a0519808798560bd3140c35bd411f66ad3b7c643d312fb49a6c7943b5e7e41ee224f7c3742c27a140
 EBUILD apache-2.2.25.ebuild 3431 SHA256 1c22f6a2ad0126cc7be3bce968931b0c204a030af925f843e81129cf89c21fd0 SHA512 3e2c527b1abefda9934bc3c272df412e2878894424b026df367107fddb39502b3d5251d1807edf22ba9b634c24321d0516cd918e1ee9703b2e500f4aab3f9ddd WHIRLPOOL cdeb8411ffcbaa0a86d5d4ab17af2785046750c026e1a431d3b61f0394e95aff92e8b1bb6e3742d4190a3d1ddbe21a8ae314672a37708471594f1716f56d3c58
-EBUILD apache-2.2.26.ebuild 3423 SHA256 a14661e5b61eab42351fa4e55e820368b4456927171d89a5c034690a233c8120 SHA512 4122fcaeedb1108bfb3f25a35f52d2eea2f4d6e1ebdef2f552836bffb1d401a316a5b76f961b44658f561e2a2abafc915fd86f13dfa02259947ec14c53d11bc0 WHIRLPOOL 5fbe8114565013c93ab53b337f26f265b08b2d68338408b64e545a415ad70c3f6d1099f5db364b3d493a40d45fceb89ecc15ad363bd05d93dde16e9dea5cb4b2
+EBUILD apache-2.2.27-r1.ebuild 3084 SHA256 b828ff012f04454c21c7e444377ded948aa61a6cadbcc3f3e2b0f20333de6fab SHA512 1a1d9918f63a7faaa750ab5ea29395baa9cad609ca6fbac759686b3cb08a70bda5ba21c623012a32e6e4068d9e5dc25f74cc553d717a31770dfd1e97a8fd3d13 WHIRLPOOL 9e0a647bc499594fa18f6baa0dbd2933d76f4e9c41ad9b33caf665f9fd0f00c26c67ddc08c3779a96589b3f48a103f1f109089312628a8c0080a8bbbc87f1e7f
 EBUILD apache-2.2.27.ebuild 3413 SHA256 2d5ec8d05608fcc416b8bdf7d9a9d09a35702af7fdca2fad626e2b6cf677b0ca SHA512 021fa7aa15e5c15a1d655207117afc895a413225cccd2ca75f612e59b569676e00249e28f76f06e6afbf5164b7a0d49a97acebec8ea559d7b999628522da9752 WHIRLPOOL df5c11988c4172f43e25ee849efd5e311c12f16220f4c62d694bf7c183f4d961961b30e24348c0e322db12c58e511c337b1b90818de995ebdf7f15ed7e171385
-EBUILD apache-2.4.9.ebuild 8119 SHA256 8758610061af4c2dc87786ede94740d7f19bab7d2c8c6ef34252e8be3be3c657 SHA512 2de1025be341bb8b02525146e800b0bb2cb9043033be263f36e4ff975ab7510c585d47a70288ce73ac06f8b0b62b82e05f58135333910c0ab98a76515a63ab3a WHIRLPOOL f3542b5eb5b025cba032a919eef2dba966b8611291bcb5575202a26d8cfc080f486c54f29efbb9efc4d3b6d203ef7dd261f0092551c99db2e986ad6411852f39
-MISC ChangeLog 24273 SHA256 0234bef92fd3bfcd7653f913773909ca1b7a10ecf04fb484655163e7e34edd9a SHA512 292140641e00ff389e05334747631be160bdddd08b70120cb4611e945aa74e22730e196ced93f1ab309e27aad805dd6d6ba2c8b9a54afcd8a2cf124e2710008b WHIRLPOOL 7aa0ff63dd8007f55fdb6c0a001088b54bcfda595a21648f8bdf431539f27ecbd5135c20d3b4f6d168e66bcfb685bbdff01a33cb80bcd8833120f2aafbdad4f4
+EBUILD apache-2.4.9-r1.ebuild 7462 SHA256 02d68b39d78b784bc50f80428110031025943c4ea8a30122bcd08646696864d8 SHA512 d41c35106d6a33fd8d8d5a3d78c8048867b2591918bd55cda51ccc230c0625b212cb2bf6c9dca4b4aa73c3849c6f741e293ab82a2506fb6172c60702d05878d5 WHIRLPOOL 451cad10fc2888d2d76a9ae5ad7e256cef44b9e0092dbc24e7f77436bc889cd8ffaf114c1932712e5b2e45e6784ca71ee5e7bacf020a27b9d8d1be128b1a29eb
+MISC ChangeLog 24558 SHA256 8829581477f85af98f0c2cf3370e7a5553a565e42b3a27239ce3602ff625e401 SHA512 d7d492fa4abaea4441a5b9d91cd32ba5d9da72202534b99435c505fb7835fbc01def530ae1100d2e069e1d68dd9f2d70f6dcd99a44f10c152af79b2072962b47 WHIRLPOOL 247d75307248e7b3ca7feaa22680d7b00718748d75090a735d8242a5d2880471db0768a958ed18d13740d05e89df7ff1341182b78affe9d0b8b40ed1c6a89f0d
 MISC ChangeLog-2008 105137 SHA256 4afec18ad3c76df40314edb37b5512f81ca6223c38a899534d9d15342481accf SHA512 92dfd339b1c4ddec29222076a597220dc7faa504e2ee770339892f155febbf34004e60395f9eb21b43d3b1feb5f362c2946b69cc65151b5ba00fb53b35ccb9c6 WHIRLPOOL 89d77300aafb53ae0632904118064de19313fe51f635512314471e845574e7a624a770ae4ca4e335cff67d4fee92e062d28ef985a54c577a1b8b3ea0f621c0f8
 MISC metadata.xml 2590 SHA256 165207b1cfcf0ce30ad2af5b0dd7e8cf06dbfc9ae4ed42e35bbc5d8e6ce0fdee SHA512 74bd116d0678c035c0e19f82a379c80b7f59b87db649e9c6835a3133569c52d6c0973f9445054bb1b5278d22c95f28f3d85dfda0878ae094172f7e84e15a0113 WHIRLPOOL 8c5ce73c072551040ac44c6ee632fd6144cf2673904401481a01311fe9edf72eb8e1a3d57cee9f94c1c8d9d71d1f80ce2a2f11fb9cb3274b7057489fe7b8578c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTU5itAAoJELp701BxlEWf1rcP/iIhRnPFbM9lwSZmMuF6CKmf
-zd9GXsvtl1NAw8o36jK10T+Llmx0rkh8SrRDOLosU3Fi8jF8o0RMuVe7abli9uTD
-k7Xbxv3rvsFF1+/Gc+CUH5uZ1FwwVXhGPd8cohQPhgqZnIH+gjIp0etuD7P2cZPf
-k5xhZq+E4F+O6NfUKMfpwMTiilBfCNTbK0e38xrqQRPXk7+ddKzL5d+3ob2RaSbU
-hKwuS+sO9e1fbNplIqE+DJx+ngSncoZFNXunDWqXBpxxRPGVATKrUYcMrYuLT1HY
-QRPhB5vAbB9IzEuRY6W0nETVVdLn90A5bobx4RtLb9QX+bmy72gxQ2bLh/+dhIXw
-3LfC+wyk7A8sFawhnbvR1HD0MSSz4GmvXFaDCGKtZHKtagYjlpcAA4Uw1uf0/xDT
-9PdOY1kOaLuyukzdXKcEZ6DckeTozAlXzwYwKrocipGtHFO2Kzn3TupYloYDXqVa
-oC1HCE8qmrnLGLQ9HY2/Sl5aGp8wXxw2qPgY1R/cXL37X82Zka917kpk+6ZKbQhU
-sGZQV66R659+oN9Bf8cVgVXJ2+uHamYVR/XB23sS9ziH7yaPftv5YmnkGV7GZU77
-4hnLPDLcgintCeMJYIyRIdeRhTmoEhEoedvVTCZM7G0rndXubJ5z6SlFUTP8ZOOD
-Y+eiG3RezUVkEYmNZtrm
-=igi3
+iQIcBAEBCAAGBQJTVDv7AAoJEPiazRVxLXTFApwQAJvFNBEP27i1Uev8g5vcE7vV
+PXx7n7eCFG9ink+oKOLXCB/eNTrRJereKgWb8ulNcfTfh6AR3wOss8+pKVtU+acS
+Li+I0xvcTFCwUBkJlE/qYX6WrH/zblEcni2nmuhSF5Rfmtox1LyJ5hodL44m5e7y
+qk7zK5o/wgecdxmvg7w7lUXmqFPzv0oP44MukuwW2mAFi4feaiRJuSYxWzKI2tEL
+RTwPztaDm+iOUKXE3pDSmKz6EAKxHJV9BUKWKqjsQH7KT+R2ILsnFyfk/RgRlpgh
+UgeClVXwJnlv5n0UpEuL8lgNRqFw0BS1RWXREIReYraKzfqKQddYX+XkkoFeggwx
+zsYQ4XGFK7hcsjeFreDnKdKkfuUURHHYV/sx8efRtHZF6ZoP642wzm7vJ6CwHsv4
+n0FZWvqZaDid9JKlsh0Ognr9uWoXvqHgoGan9NzOvbi8VXor2kJppWq1w00lTL4f
+RGwDZ/OCDS6w6o3myZSJoRffY51vomjG5aYFEt0Wg9RCIGbKFlBUYextDm6xPwcH
+d4I/g29K4ft2cVGGqdl0J2PHOXUDOCTgAh49Cc6asb99JZ0QhvWMp9GkNaitFt9S
+pQRVcnXf6xY9a7Fqb0HZJO9/VG2hl2xKbHXCvvDgsTW68fQXKdLrApp1xoS/d239
+RVoa2j4nz+9OKzSPf/V8
+=fqnA
 -----END PGP SIGNATURE-----
